tests/rosetta/transpiler/Elixir/15-puzzle-solver.error
run: exit status 1
** (SyntaxError) invalid syntax found on /workspace/mochi/tests/rosetta/transpiler/Elixir/15-puzzle-solver.exs:2:40:
    error: unexpected ( after alias FifteenPuzzleExample. Function names and identifiers in Elixir start with lowercase characters or underscore. For example:

        hello_world()
        _starting_with_underscore()
        numb3rs_are_allowed()
        may_finish_with_question_mark?()
        may_finish_with_exclamation_mark!()

    Unexpected token: (
    │
  2 │ IO.inspect(testpkg.FifteenPuzzleExample())
    │                                        ^
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/15-puzzle-solver.exs:2:40
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
