tests/rosetta/transpiler/Elixir/15-puzzle-solver.exs
# Code generated by Mochi transpiler 2025-07-22 17:27 +0700
IO.inspect(testpkg.FifteenPuzzleExample())
